update land cover

--- a/midterm_project.ipynb
+++ b/midterm_project.ipynb
@@ -1,18 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5097b2e",
+   "cell_type": "markdown",
+   "id": "60938eef",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Midterm Project ##"
+    "## Midterm Project, Group 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3d8d6362",
    "metadata": {},
    "outputs": [],
@@ -30,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "16c56dec",
    "metadata": {},
    "outputs": [],
@@ -50,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5d0575c7",
    "metadata": {},
    "outputs": [],
@@ -70,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "382e61f9",
    "metadata": {},
    "outputs": [],
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e7ee775b",
    "metadata": {},
    "outputs": [
@@ -114,57 +112,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d3578186",
+   "execution_count": null,
+   "id": "2be197c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Land Cover ##\n",
-    "raster_path = r\"data/2021350_Mosaik_LC.tif\"\n",
-    "output_vector = r\"data/LC_graz_250m_majority.gpkg\"\n",
-    "target_resolution = (250, 250)  \n",
+    "#place = \"Graz, Austria\"\n",
+    "#main_crs = \"EPSG:31256\"\n",
+    "#raster_path = r\"data/2021350_Mosaik_LC.tif\"\n",
+    "#output_vector = r\"data/LC_graz_250m_majority.gpkg\"\n",
+    "#target_resolution = (250, 250)  \n",
     "\n",
-    "graz_boundary = ox.geocode_to_gdf(place).to_crs(main_crs)\n",
+    "#graz_boundary = ox.geocode_to_gdf(place).to_crs(main_crs)\n",
     "\n",
-    "with rasterio.open(raster_path) as src:\n",
-    "    out_image, out_transform = mask(\n",
-    "        src,\n",
-    "        [graz_boundary.geometry.iloc[0]],\n",
-    "        crop=True)\n",
-    "    lc = out_image[0]  \n",
+    "#with rasterio.open(raster_path) as src:\n",
+    "#    out_image, out_transform = mask(\n",
+    "#        src,\n",
+    "#        [graz_boundary.geometry.iloc[0]],\n",
+    "#        crop=True\n",
+    "#    )\n",
+    "#    lc = out_image[0]  \n",
     "\n",
-    "    height, width = lc.shape\n",
-    "    left, top = out_transform * (0, 0)\n",
-    "    right, bottom = out_transform * (width, height)\n",
+    "#    height, width = lc.shape\n",
+    "#    left, top = out_transform * (0, 0)\n",
+    "#    right, bottom = out_transform * (width, height)\n",
     "\n",
-    "    dst_transform, dst_width, dst_height = calculate_default_transform(\n",
-    "        src.crs,          \n",
-    "        src.crs,\n",
-    "        width, height,\n",
-    "        left, bottom, right, top,\n",
-    "        resolution=target_resolution)\n",
+    "#    dst_transform, dst_width, dst_height = calculate_default_transform(\n",
+    "#        src.crs,        \n",
+    "#        src.crs,\n",
+    "#        width, height,\n",
+    "#        left, bottom, right, top,\n",
+    "#        resolution=target_resolution\n",
+    "#    )\n",
     "\n",
-    "    lc_250m = np.empty((dst_height, dst_width), dtype=lc.dtype)\n",
+    "#    lc_250m = np.empty((dst_height, dst_width), dtype=lc.dtype)\n",
     "\n",
-    "    reproject(\n",
-    "        source=lc,\n",
-    "        destination=lc_250m,\n",
-    "        src_transform=out_transform,\n",
-    "        src_crs=src.crs,\n",
-    "        dst_transform=dst_transform,\n",
-    "        dst_crs=src.crs,\n",
-    "        resampling=Resampling.mode)  # majority\n",
+    "#    reproject(\n",
+    "#        source=lc,\n",
+    "#        destination=lc_250m,\n",
+    "#        src_transform=out_transform,\n",
+    "#        src_crs=src.crs,\n",
+    "#       dst_transform=dst_transform,\n",
+    "#        dst_crs=src.crs,\n",
+    "#        resampling=Resampling.mode \n",
+    "#    )\n",
     "\n",
-    "    nodata = src.nodata\n",
-    "    valid_mask = lc_250m != nodata if nodata is not None else np.ones_like(lc_250m, dtype=bool)\n",
+    "#    nodata = src.nodata\n",
+    "#    valid_mask = lc_250m != nodata if nodata is not None else np.ones_like(lc_250m, dtype=bool)\n",
     "\n",
-    "    results = [\n",
-    "        {\"geometry\": shape(geom), \"lc\": int(value)}\n",
-    "        for geom, value in shapes(lc_250m, mask=valid_mask, transform=dst_transform)]\n",
+    "#    results = [\n",
+    "#        {\"geometry\": shape(geom), \"lc\": int(value)}\n",
+    "#        for geom, value in shapes(lc_250m, mask=valid_mask, transform=dst_transform)\n",
+    "#    ]\n",
     "\n",
-    "gdf = gpd.GeoDataFrame(results, crs=main_crs)\n",
+    "#gdf = gpd.GeoDataFrame(results, crs=main_crs)\n",
     "\n",
-    "gdf.to_file(output_vector, driver=\"GPKG\")\n",
+    "#gdf.to_file(output_vector, driver=\"GPKG\")\n",
     "\n"
    ]
   }
