Pre-processing done

--- a/midterm_project.ipynb
+++ b/midterm_project.ipynb
@@ -10,13 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "3d8d6362",
    "metadata": {},
    "outputs": [],
    "source": [
     "import osmnx as ox\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "import geopandas as gpd\n",
     "import rasterio\n",
     "from rasterio.mask import mask\n",
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "16c56dec",
    "metadata": {},
    "outputs": [],
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5d0575c7",
    "metadata": {},
    "outputs": [],
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e7ee775b",
    "metadata": {},
    "outputs": [
@@ -112,69 +113,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2be197c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#place = \"Graz, Austria\"\n",
-    "#main_crs = \"EPSG:31256\"\n",
-    "#raster_path = r\"data/2021350_Mosaik_LC.tif\"\n",
-    "#output_vector = r\"data/LC_graz_250m_majority.gpkg\"\n",
-    "#target_resolution = (250, 250)  \n",
+    "place = \"Graz, Austria\"\n",
+    "main_crs = \"EPSG:31256\"\n",
+    "raster_path = r\"data/2021350_Mosaik_LC.tif\"\n",
+    "output_vector = r\"data/LC_graz_25m_majority.gpkg\"\n",
+    "target_resolution = (25, 25)  \n",
     "\n",
-    "#graz_boundary = ox.geocode_to_gdf(place).to_crs(main_crs)\n",
+    "graz_boundary = ox.geocode_to_gdf(place).to_crs(main_crs)\n",
     "\n",
-    "#with rasterio.open(raster_path) as src:\n",
-    "#    out_image, out_transform = mask(\n",
-    "#        src,\n",
-    "#        [graz_boundary.geometry.iloc[0]],\n",
-    "#        crop=True\n",
-    "#    )\n",
-    "#    lc = out_image[0]  \n",
+    "with rasterio.open(raster_path) as src:\n",
+    "    out_image, out_transform = mask(\n",
+    "        src,\n",
+    "        [graz_boundary.geometry.iloc[0]],\n",
+    "        crop=True\n",
+    "    )\n",
+    "    lc = out_image[0]  \n",
     "\n",
-    "#    height, width = lc.shape\n",
-    "#    left, top = out_transform * (0, 0)\n",
-    "#    right, bottom = out_transform * (width, height)\n",
+    "    height, width = lc.shape\n",
+    "    left, top = out_transform * (0, 0)\n",
+    "    right, bottom = out_transform * (width, height)\n",
     "\n",
-    "#    dst_transform, dst_width, dst_height = calculate_default_transform(\n",
-    "#        src.crs,        \n",
-    "#        src.crs,\n",
-    "#        width, height,\n",
-    "#        left, bottom, right, top,\n",
-    "#        resolution=target_resolution\n",
-    "#    )\n",
+    "    dst_transform, dst_width, dst_height = calculate_default_transform(\n",
+    "        src.crs,        \n",
+    "        src.crs,\n",
+    "        width, height,\n",
+    "        left, bottom, right, top,\n",
+    "        resolution=target_resolution\n",
+    "    )\n",
     "\n",
-    "#    lc_250m = np.empty((dst_height, dst_width), dtype=lc.dtype)\n",
+    "    lc_250m = np.empty((dst_height, dst_width), dtype=lc.dtype)\n",
     "\n",
-    "#    reproject(\n",
-    "#        source=lc,\n",
-    "#        destination=lc_250m,\n",
-    "#        src_transform=out_transform,\n",
-    "#        src_crs=src.crs,\n",
-    "#       dst_transform=dst_transform,\n",
-    "#        dst_crs=src.crs,\n",
-    "#        resampling=Resampling.mode \n",
-    "#    )\n",
+    "    reproject(\n",
+    "        source=lc,\n",
+    "        destination=lc_250m,\n",
+    "        src_transform=out_transform,\n",
+    "        src_crs=src.crs,\n",
+    "       dst_transform=dst_transform,\n",
+    "        dst_crs=src.crs,\n",
+    "        resampling=Resampling.mode \n",
+    "    )\n",
     "\n",
-    "#    nodata = src.nodata\n",
-    "#    valid_mask = lc_250m != nodata if nodata is not None else np.ones_like(lc_250m, dtype=bool)\n",
+    "    nodata = src.nodata\n",
+    "    valid_mask = lc_250m != nodata if nodata is not None else np.ones_like(lc_250m, dtype=bool)\n",
     "\n",
-    "#    results = [\n",
-    "#        {\"geometry\": shape(geom), \"lc\": int(value)}\n",
-    "#        for geom, value in shapes(lc_250m, mask=valid_mask, transform=dst_transform)\n",
-    "#    ]\n",
+    "    results = [\n",
+    "        {\"geometry\": shape(geom), \"lc\": int(value)}\n",
+    "        for geom, value in shapes(lc_250m, mask=valid_mask, transform=dst_transform)\n",
+    "    ]\n",
     "\n",
-    "#gdf = gpd.GeoDataFrame(results, crs=main_crs)\n",
+    "gdf = gpd.GeoDataFrame(results, crs=main_crs)\n",
     "\n",
-    "#gdf.to_file(output_vector, driver=\"GPKG\")\n",
+    "gdf.to_file(output_vector, driver=\"GPKG\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f3c2e12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remaining polygons: 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\micha\\Uni1\\GIS Analysetechniken 2\\Gis Anal2\\.venv\\Lib\\site-packages\\geopandas\\geodataframe.py:1968: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  super().__setitem__(key, value)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# only keeping vegetation classes and green spaces, dissolving them and keeping only polygons >= 100 sqm\n",
+    "gdf.loc[gdf['lc'].isin([1, 3, 6]), 'lc'] = 1\n",
+    "\n",
+    "landcover_dissolved = gdf.dissolve(by='lc', as_index=False)\n",
+    "\n",
+    "landcover_dissolved_green = landcover_dissolved[landcover_dissolved['lc'] == 1]\n",
+    "\n",
+    "landcover_dissolved_green['area'] = landcover_dissolved_green.geometry.area\n",
+    "\n",
+    "landcover_dissolved_green_100 = landcover_dissolved_green[landcover_dissolved_green['area'] >= 100]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a26f4a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# matching the landcover filter for osm data as well\n",
+    "graz_leisure = graz_leisure[graz_leisure.geometry.type.isin(['Polygon', 'MultiPolygon'])]\n",
+    "\n",
+    "graz_leisure['area'] = graz_leisure.geometry.area\n",
+    "graz_leisure = graz_leisure[graz_leisure['area'] >= 100]\n",
+    "graz_leisure = graz_leisure.drop(columns=['area'])\n",
+    "\n",
+    "landcover_simple = landcover_dissolved_green_100[['geometry', 'lc']].copy()\n",
+    "graz_leisure_simple = graz_leisure[['geometry']].copy()\n",
+    "graz_leisure_simple['lc'] = 1  \n",
+    "\n",
+    "# merging and dissolving datasets\n",
+    "merged = gpd.GeoDataFrame(\n",
+    "    pd.concat([landcover_simple, graz_leisure_simple], ignore_index=True),\n",
+    "    crs=main_crs\n",
+    ")\n",
+    "\n",
+    "merged_dissolved = merged.dissolve(by='lc', as_index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f51a651",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# assigning IDs to green spaces and extracting boundary points at 50 meter intervals\n",
+    "merged_dissolved['green_id'] = range(1, len(merged_dissolved) + 1)\n",
+    "\n",
+    "green_points = []\n",
+    "for idx, row in merged_dissolved.iterrows():\n",
+    "    boundary = row.geometry.boundary\n",
+    "    distances = range(0, int(boundary.length), 50)\n",
+    "    points = [boundary.interpolate(d) for d in distances]\n",
+    "    for point in points:\n",
+    "        green_points.append({\n",
+    "            'green_id': row['green_id'],\n",
+    "            'geometry': point,\n",
+    "        })\n",
+    "green_points = gpd.GeoDataFrame(green_points, crs=main_crs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b63668ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extracting building centroids as analysis points from osm data\n",
+    "tags_buildings = {\"building\": True}\n",
+    "buildings = ox.features_from_place(place, tags=tags_buildings).to_crs(main_crs)\n",
+    "buildings = buildings[buildings.geometry.type.isin(['Polygon', 'MultiPolygon'])]\n",
+    "analysis_points = buildings.copy()\n",
+    "analysis_points['geometry'] = analysis_points.geometry.centroid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3c2ff6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# snapping green space and analysis points to network using nearest node\n",
+    "green_points['nearest_node'] = ox.distance.nearest_nodes(\n",
+    "    graph2, \n",
+    "    green_points.geometry.x, \n",
+    "    green_points.geometry.y\n",
+    ")\n",
+    "\n",
+    "analysis_points['nearest_node'] = ox.distance.nearest_nodes(\n",
+    "    graph2,\n",
+    "    analysis_points.geometry.x,\n",
+    "    analysis_points.geometry.y\n",
+    ")\n",
+    "\n",
+    "# removing duplicate nodes\n",
+    "green_points = green_points.drop_duplicates(subset=['nearest_node'])\n",
+    "analysis_points = analysis_points.drop_duplicates(subset=['nearest_node'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ae3371a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Preprocessing complete!\n",
+      "Green spaces: 1\n",
+      "Green entry points: 5095\n",
+      "Analysis points: 6772\n",
+      "Network nodes: 13106\n",
+      "Network edges: 33176\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nPreprocessing complete!\")\n",
+    "print(f\"Green entry points: {len(green_points)}\")\n",
+    "print(f\"Analysis points: {len(analysis_points)}\")\n",
+    "print(f\"Network nodes: {len(graph2.nodes)}\")\n",
+    "print(f\"Network edges: {len(graph2.edges)}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.3)",
    "language": "python",
    "name": "python3"
   },
@@ -188,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
