--- a/midterm_project.ipynb
+++ b/midterm_project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "3d8d6362",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,10 @@
     "from rasterio.features import shapes\n",
     "from shapely.geometry import shape\n",
     "import numpy as np\n",
-    "from rasterio.warp import calculate_default_transform, reproject, Resampling"
+    "from rasterio.warp import calculate_default_transform, reproject, Resampling\n",
+    "from shapely.geometry import box\n",
+    "import networkx as nx\n",
+    "from keplergl import KeplerGl"
    ]
   },
   {
@@ -329,11 +332,162 @@
     "print(f\"Network nodes: {len(graph2.nodes)}\")\n",
     "print(f\"Network edges: {len(graph2.edges)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b7e1cef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes, edges = ox.graph_to_gdfs(graph2, nodes=True, edges=True)\n",
+    "edges = edges.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07e7aa09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sources of Network Analysis: Node IDs of green points without possible NaN-Values\n",
+    "green_sources = green_points['nearest_node'].dropna().astype(int).tolist()\n",
+    "\n",
+    "distances = nx.multi_source_dijkstra_path_length(\n",
+    "    G=graph2,\n",
+    "    sources=green_sources,\n",
+    "    weight='length',\n",
+    "    cutoff=10000  # Meter\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c2c8805",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_dist(n):\n",
+    "    return distances.get(n, None)  # None if point is not within 10000 m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b18fbfb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analysis_points['dist_green'] = analysis_points['nearest_node'].map(get_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a3d3f0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bounds = graz_boundary.to_crs(main_crs).total_bounds\n",
+    "minx, miny, maxx, maxy = bounds\n",
+    "res = 100  # Meter\n",
+    "\n",
+    "polys = []\n",
+    "for x in np.arange(minx, maxx, res):\n",
+    "    for y in np.arange(miny, maxy, res):\n",
+    "        polys.append(box(x, y, x+res, y+res))\n",
+    "\n",
+    "grid = gpd.GeoDataFrame(geometry=polys, crs=main_crs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ea8d3c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add Building Centroids to the Grid with a spatial join\n",
+    "analysis_in_grid = gpd.sjoin(\n",
+    "    analysis_points[['geometry', 'dist_green']],\n",
+    "    grid[['geometry']],\n",
+    "    how='inner',\n",
+    "    predicate='within'\n",
+    ")\n",
+    "\n",
+    "# mean value per grid cell\n",
+    "grid['dist_green_mean'] = analysis_in_grid.groupby('index_right')['dist_green'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51ac5972",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid['dist_green_mean'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9077e746",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bins = [0, 100, 200, 300, 400, 500, 600, grid['dist_green_mean'].max()]\n",
+    "labels = ['≤100 m', '100–200 m', '200–300 m', '300–400 m', '400-500 m', '500-600 m', '>600 m']\n",
+    "\n",
+    "grid['dist_class'] = pd.cut(\n",
+    "    grid['dist_green_mean'],\n",
+    "    bins=bins,\n",
+    "    labels=labels,\n",
+    "    include_lowest=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07bc774a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_clean = grid.dropna(subset=['dist_green_mean'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9a5be5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the interactive visualization with Kepler\n",
+    "config = {\n",
+    "    \"version\": \"v1\",\n",
+    "    \"config\": {\n",
+    "        \"mapState\": {\n",
+    "            \"latitude\": 47.07,   # Graz\n",
+    "            \"longitude\": 15.44,\n",
+    "            \"zoom\": 12,\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "map = KeplerGl(height=600)\n",
+    "map.add_data(data=grid_clean, name='Distances to Green Spaces in Graz')\n",
+    "map.config = config\n",
+    "map.save_to_html(file_name=\"green_graz.html\")\n",
+    "map"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.12.3)",
+   "display_name": "GIS2",
    "language": "python",
    "name": "python3"
   },
@@ -347,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
