Cleaned Analysis Code

--- a/midterm_project.ipynb
+++ b/midterm_project.ipynb
@@ -336,17 +336,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b7e1cef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nodes, edges = ox.graph_to_gdfs(graph2, nodes=True, edges=True)\n",
-    "edges = edges.reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "07e7aa09",
    "metadata": {},
    "outputs": [],
@@ -365,22 +354,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c2c8805",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_dist(n):\n",
-    "    return distances.get(n, None)  # None if point is not within 10000 m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b18fbfb0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "analysis_points['dist_green'] = analysis_points['nearest_node'].map(get_dist)"
+    "analysis_points['dist_green'] = analysis_points['nearest_node'].map(distances)"
    ]
   },
   {
@@ -439,7 +417,7 @@
    "outputs": [],
    "source": [
     "bins = [0, 100, 200, 300, 400, 500, 600, grid['dist_green_mean'].max()]\n",
-    "labels = ['≤100 m', '100–200 m', '200–300 m', '300–400 m', '400-500 m', '500-600 m', '>600 m']\n",
+    "labels = ['0-100 m', '100–200 m', '200–300 m', '300–400 m', '400-500 m', '500-600 m', '>600 m']\n",
     "\n",
     "grid['dist_class'] = pd.cut(\n",
     "    grid['dist_green_mean'],\n",
