--- a/midterm_project.ipynb
+++ b/midterm_project.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "382e61f9",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e7ee775b",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2be197c9",
    "metadata": {},
    "outputs": [],
@@ -177,22 +177,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6f3c2e12",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Remaining polygons: 1\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\micha\\Uni1\\GIS Analysetechniken 2\\Gis Anal2\\.venv\\Lib\\site-packages\\geopandas\\geodataframe.py:1968: SettingWithCopyWarning: \n",
+      "c:\\Users\\kosch\\Desktop\\midterm_GIS\\.venv311\\Lib\\site-packages\\geopandas\\geodataframe.py:1968: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -217,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7a26f4a3",
    "metadata": {},
    "outputs": [],
@@ -244,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0f51a651",
    "metadata": {},
    "outputs": [],
@@ -267,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b63668ea",
    "metadata": {},
    "outputs": [],
@@ -282,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e3c2ff6e",
    "metadata": {},
    "outputs": [],
@@ -307,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "3ae3371a",
    "metadata": {},
    "outputs": [
@@ -317,7 +310,6 @@
      "text": [
       "\n",
       "Preprocessing complete!\n",
-      "Green spaces: 1\n",
       "Green entry points: 5095\n",
       "Analysis points: 6772\n",
       "Network nodes: 13106\n",
@@ -335,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "07e7aa09",
    "metadata": {},
    "outputs": [],
@@ -353,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b18fbfb0",
    "metadata": {},
    "outputs": [],
@@ -363,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5a3d3f0d",
    "metadata": {},
    "outputs": [],
@@ -382,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4ea8d3c5",
    "metadata": {},
    "outputs": [],
@@ -401,17 +393,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "51ac5972",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    2952.000000\n",
+       "mean       13.783333\n",
+       "std        36.678609\n",
+       "min         0.000000\n",
+       "25%         0.000000\n",
+       "50%         0.000000\n",
+       "75%        10.378990\n",
+       "max       677.564746\n",
+       "Name: dist_green_mean, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grid['dist_green_mean'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "9077e746",
    "metadata": {},
    "outputs": [],
@@ -429,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "07bc774a",
    "metadata": {},
    "outputs": [],
@@ -439,10 +450,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e9a5be5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n",
+      "Map saved to green_graz.html!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bfce9c9502cf4dbb827bf9f50d797a12",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(config={'version': 'v1', 'config': {'mapState': {'latitude': 47.07, 'longitude': 15.44, 'zoom': 12}}}…"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the interactive visualization with Kepler\n",
     "config = {\n",
@@ -465,9 +500,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "GIS2",
+   "display_name": "Python (.venv311)",
    "language": "python",
-   "name": "python3"
+   "name": "venv311"
   },
   "language_info": {
    "codemirror_mode": {
@@ -479,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
